css/mediaStyle.css
#mediaToggle, #videoToggle, #photoToggle {
    color: white;
    /*border: 1px solid var(--borderColor);*/
    cursor: pointer;
    text-align: center;
}

.buttonRow {
	width: 100%;
	padding: 0;
	display: flex;
	align-items: center;
}

.mediaButton {
    color: black;
}

iframe {
    width: 100%;
    height: 100%;
    margin: auto;
}

.videoRow {
	width: 100%;
	padding: 0;
	/*display: flex;*/
	align-items: center;
}

.videoDiv {
    width: 100%;
    /*height: 0;*/
    padding-top: 0;
    /*padding-bottom: var(--heightWidthRatio); /* preserves the 16/9 aspect ratio */
    /*margin: 15px 0;*/
    /*border: 1px solid red;*/
}

.video {
    /*border: var(--borderThickness) solid var(--borderColor);*/
    /*display: block;*/
    margin: auto;
}

.photoRow {
    width: 100%;
    padding: 0;
    /*border: 1px solid green;*/
    /*display: flex;*/
    align-items: center;
}

.photo {
    /*border: var(--borderThickness) solid var(--borderColor);*/
    /*background-color: white;*/
    cursor: pointer;
    max-width: 100%;
    width: 100%;
    height: auto;
    /*vertical-align: middle;*/
    /*margin-top: auto;*/
    /*margin-bottom: auto;*/
    /*box-shadow: 0px 10px 8px var(--darkGray);*/
}
.photo:hover {
    opacity: 0.8;
}

.viewer {
    display: none;
    position: fixed;
    z-index: 1;
    padding-top: 100px;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: black;
}

.viewer-m {
    padding-top: 20px;
}

.photoViewerBox {
    position: relative;
    /*border: 1px solid red;*/
}

button {
    border: none;
}

.navButtons {
    position: absolute;
    /*left: 5%;*/
    width: 90%;
    max-width: 1200px;
    height: 100%;
    left: 0;
    right: 0;
    margin: auto;
    /*border: 1px solid blue;*/
    z-index: 3;
}

.navButton {
    font-size: 2em;
    color: white;
    background: black;
}

.close {
    font-size: 1em;
    color: white;
    position: relative;
    left: 5%;
    /*position: absolute;*/
    /*left: 50%;*/
    /*width: 10%;*/
    height: 30px;
    /*margin: auto;*/
    /*height: 100%;*/
    /*margin-left: -5%;*/
    /*opacity: .2;*/
}
.close:focus {
    opacity: .5;
}
.close:hover {
    opacity: .5;
}

.previous {
    position: absolute;
    left: 0;
    width: 20%;
    height: 100%;
    opacity: 0;
}
.previous:focus {
    opacity: .5;
}
.previous:hover {
    opacity: .5;
}
.previous:active {
    opacity: 0;
}

.next {
    position: absolute;
    right: 0;
    width: 20%;
    height: 100%;
    opacity: 0;
}
.next:focus {
    opacity: .5;
}
.next:hover {
    opacity: .5;
}

.photoSlide {
    display: none;
    position: relative;
    z-index: 2;
    margin: auto;
    padding: 0;
    width: 90%;
    max-width: 1200px;
    /*border: 1px solid red;*/
}

.photoSlide .photo:hover {
    opacity: 1;
}

/*.modal {
    display: none;
    position: fixed;
    z-index: 1;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0, 0, 0);
    background-color: rgba(0, 0, 0, 0.9);
}

.modalContent {
    margin: auto;
    display: block;
    width: 80%;
    max-width: 700px;
}*/

